--- a/_sass/_tufte.scss
+++ b/_sass/_tufte.scss
@@ -205,6 +205,7 @@ figure.fullwidth figcaption {
 }
 
 // Fix for Pandoc-crossref figcaptions in full-width figures
+.subfigures > p:last-of-type, // Support Pandoc-crossref subfigures
 div.fullwidth figcaption { max-width: 33%; }
 
 /* Links: replicate underline that clears descenders */
