--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,8 +7,7 @@
   "tufte",
   "tufte-extra",
   "pandoc",
-  "pandoc-solarized",
-  "custom"
+  "pandoc-solarized"
 ;
 
 // Reveal.js support is not enabled by default.
